<resources>
    <string name="app_name">WIG</string>
    <string name="etUsername">username</string>
    <string name="tela_de_login">Tela de Login</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="fazer_login">Fazer login</string>
    <string name="email">email</string>
    <string name="cpf">CPF</string>
    <string name="cadastrar_usuario">Cadastrar Usuario</string>
    <string name="button">Button</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="title_activity_index">Index</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Pagina inicial</string>
    <string name="menu_gallery">Minhas avaliações</string>
    <string name="menu_slideshow">Empresas</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">WIG ? Oque é ?</string>
    <string name="menu_send">Sobre os desenvolvedores</string>
    <string name="Conteúdo">Conteudo</string>
    <string name="Usuario">Gustavo Bonfim</string>
    <string name="NomeEmpresa">Açai Unitoledo</string>
    <string name="avaliacao">Avaliações</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="termosCadastro">Ao se cadastrar você concorda com os termos de uso</string>
    <string name="wig_oque">WIG ? Oque é ?</string>
    <string name="sobre_os_desenvolvedores">Sobre os desenvolvedores</string>
    <string name="mais">Mais</string>
    <string name="empresas">Empresas</string>
    <string name="minhas_avalia_es">Minhas avaliações</string>
    <string name="pagina_inicial">Pagina inicial</string>
    <string name="sair">Sair</string>
    <string name="where_i_go">Where I Go</string>
    <string name="nome">nome</string>
    <string name="endereco">endereco:</string>
    <string name="endereco_da_empresa">endereco da empresa</string>
    <string name="tipo">Tipo:</string>
    <string name="tipo_da_emprea">Tipo da emprea</string>
    <string name="avaliar_empresa">Avaliar empresa</string>
    <string name="autor">Autor</string>
    <string name="avalia_es">Avaliações</string>
    <string name="avalia_es_recentes">Avaliações recentes</string>
    <string name="empresa">Empresa</string>
    <string name="informa_es_da_avalia_o">Informações da avaliação</string>
    <string name="entrar_convidado">Ou entre como convidado (apenas visualização)</string>
    <string name="avaliar">Avaliar</string>
    <string name="avaliacoesM">AVALIAÇÕES</string>
    <string name="responder_avaliacao">Responder Avaliacao</string>
    <string name="tbnResponder">Responder</string>
    <string name="voltar">voltar</string>
    <string name="responder">responder</string>
</resources>
