<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RespostaAvaliacaoActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:text="@string/responder_avaliacao"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/etConteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="150"
        android:minLines="3"
        android:maxLines="6"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/Conteúdo"
        android:inputType="textMultiLine|textNoSuggestions|textCapSentences" />

    <Button
        android:id="@+id/btnResponder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="65dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:text="@string/tbnResponder"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="65dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:visibility="gone"

        android:text="@string/voltar"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</LinearLayout>