<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TesteAvaliacao">

    <Button
        android:id="@+id/btAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="261dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Avaliar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConteudo" />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/autor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etConteudo"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/etConteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:hint="@string/Conteúdo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btAvaliacao"
        app:layout_constraintStart_toStartOf="@+id/etAutor"
        app:layout_constraintTop_toBottomOf="@+id/etAutor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="70dp"
        android:text="@string/avaliar_empresa"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/etAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>